# HalalDetector

./: LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
quran/: __init__.py  halal_detector.py
